--- a/РММ/Templates/Макет.xml
+++ b/РММ/Templates/Макет.xml
@@ -1,31 +1,16 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.17">
-	<ExternalDataProcessor uuid="5c869c52-9d04-45e0-b7cb-3c063abac7fa">
-		<InternalInfo>
-			<xr:ContainedObject>
-				<xr:ClassId>c3831ec8-d8d5-4f93-8a22-f9bfae07327f</xr:ClassId>
-				<xr:ObjectId>8a2418ec-c571-46f3-8d19-581cd1ef1356</xr:ObjectId>
-			</xr:ContainedObject>
-			<xr:GeneratedType name="ExternalDataProcessorObject.РММ" category="Object">
-				<xr:TypeId>db3cf257-d7bb-4a41-90c7-af926a55d524</xr:TypeId>
-				<xr:ValueId>aec1e34d-d604-4843-a5cf-90825e0d6252</xr:ValueId>
-			</xr:GeneratedType>
-		</InternalInfo>
+	<Template uuid="bc922e63-f26f-4861-a047-75dc9760a1de">
 		<Properties>
-			<Name>РММ</Name>
+			<Name>Макет</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>РММ</v8:content>
+					<v8:content>Макет</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
-			<DefaultForm>ExternalDataProcessor.РММ.Form.Форма</DefaultForm>
-			<AuxiliaryForm/>
+			<TemplateType>SpreadsheetDocument</TemplateType>
 		</Properties>
-		<ChildObjects>
-			<Form>Форма</Form>
-			<Template>Макет</Template>
-		</ChildObjects>
-	</ExternalDataProcessor>
+	</Template>
 </MetaDataObject>
